<resources>
    <string name="app_name">CMC Online</string>
    <string name="Login">Log In</string>
    <string name="signup"> Sign Up Here</string>
    <string name="signupdone"> Sign Up</string>
    <string name="label1">Don\'t wait</string>
    <string name="logo_name">Spotify</string>
    <string name="label2">Log in or create a new account now</string>
    <string name="email">Enter Email</string>
    <string name="password">Password</string>
    <string name="social">Or Log In using</string>
    <string name="phone">Phone</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="title_activity_signup">signup</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="crisis_management_cell_nonline">Crisis Management Cell\nOnline</string>

    <string-array name="zones">
        <item> (Select Containment Zone) </item>
        <item> Green Zone</item>
        <item> Orange Zone</item>
        <item> Red Zone</item>

    </string-array>
    <string-array name="zonefilter">
        <item> Zones </item>
        <item> Green Zone</item>
        <item> Orange Zone</item>
        <item> Red Zone</item>

    </string-array>

    <string-array name="type">
        <item> (Select Admin Type) </item>
        <item> Admin </item>
        <item> Medical </item>

    </string-array>

    <string-array name="units">
        <item> (Select Your Unit) </item>
        <item> 13BRD </item>
        <item> AFS Palam </item>
        <item> AFS Sohna Road </item>
        <item> AFS New Delhi </item>


        <item> Other </item>
    </string-array>

    <string-array name="approves">
        <item>Pending</item>
        <item>Approve</item>
        <item>Decline</item>
    </string-array>

    <string-array name="people">
        <item>People</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

    <string-array name="stat">
        <item>All</item>
        <item>Pending</item>
        <item>Approved</item>
        <item>Declined</item>
    </string-array>


    <string-array name="status">
        <item>Pending</item>
        <item>Approved</item>
        <item>Declined</item>
    </string-array>
</resources>