<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login"
    tools:layout_editor_absoluteY="81dp">

    <RelativeLayout
        android:id="@+id/rootView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_centerVertical="true">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000" />

        <ImageView
            android:id="@+id/image_ariana"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:alpha="0.1"
            android:src="@drawable/flag" />

        <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="CMC Login"
            android:textColor="@color/blueMaterial"
            android:textSize="38dp" />

        <RelativeLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"

            android:layout_marginTop="50dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo">

            <LinearLayout
                android:id="@+id/lnphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/tvphone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorWhite"
                    android:hint="@string/phone"
                    android:maxLength="10"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorHint"
                    android:textSize="16sp"
                    android:maxLines="1"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnpassword"
                android:layout_marginTop="20dp"
                android:layout_below="@id/lnphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/tvpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:backgroundTint="@color/colorWhite"
                    android:inputType="textPassword"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorHint"
                    android:textSize="16sp"
                    android:maxLines="1"

                    />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btlogin"
                android:layout_below="@id/lnpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="5dp"
                android:text="@string/Login"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/btlogin"
                android:text="or"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorWhite"
                android:textSize="18dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/tosignup"
                android:layout_below="@id/or"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:background="@drawable/button_transparent"
                android:textSize="18dp" />







        </RelativeLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>