<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup"
    tools:layout_editor_absoluteY="81dp">

    <RelativeLayout
        android:id="@+id/rootView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_centerVertical="true">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000" />

        <ImageView
            android:id="@+id/image_ariana"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:alpha="0.1"
            android:src="@drawable/flag" />

        <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="Enter Your Details"
            android:textColor="#fff"
            android:textSize="35dp" />

        <RelativeLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"

            android:layout_marginTop="25dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo">


            <LinearLayout
                android:id="@+id/namel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                >

            <LinearLayout
                android:id="@+id/lnfname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <EditText

                    android:id="@+id/tvfname"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorWhite"
                    android:hint="@string/fname"
                    android:maxLength="50"
                    android:imeOptions="actionNext"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorHint"
                    android:textSize="16sp"
                    android:maxLines="1"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnlname"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lnfname"
                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/tvlname"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorWhite"
                    android:hint="@string/lname"
                    android:imeOptions="actionNext"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorHint"
                    android:textSize="16sp" />

            </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/lnphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_below="@id/namel"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/tvphone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorWhite"
                    android:hint="@string/phone"
                    android:maxLength="10"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorHint"
                    android:textSize="16sp"
                    android:maxLines="1"
                    />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/lnemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_below="@id/lnphone"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/tvemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorWhite"
                    android:hint="Email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorHint"
                    android:textSize="16sp"
                    android:maxLines="1"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnperson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_below="@id/lnemail"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/tvperson"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorWhite"
                    android:hint="Number of people (Including Self)"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="1"
                    android:maxLines="1"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorHint"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnlocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_below="@+id/lnperson">


                <EditText
                    android:id="@+id/tvlocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorWhite"
                    android:hint="Current City, State"
                    android:maxLength="50"
                    android:imeOptions="actionNext"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorHint"
                    android:textSize="16sp"
                    android:maxLines="1"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnzone"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_below="@id/lnlocation">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight=".28"

                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/tvzone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:layout_marginLeft="5dp"
                        android:spinnerMode="dropdown"

                        />



                </RelativeLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/lnunit"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_below="@id/lnzone">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight=".28"

                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/tvunit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:layout_marginLeft="5dp"
                        android:spinnerMode="dropdown"

                        />



                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lndep"
                android:layout_below="@id/lnunit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

            <EditText
                android:id="@+id/tvdep"
                android:windowSoftInputMode="stateHidden"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Departure Date"
                android:backgroundTint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorHint"
                android:textSize="16sp"
                android:maxLines="1"

                />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnarrival"
                android:layout_below="@id/lndep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/tvarrival"
                    android:windowSoftInputMode="stateHidden"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Expected Arrival in Delhi"
                    android:backgroundTint="@color/colorWhite"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorHint"
                    android:textSize="16sp"
                    android:maxLines="1"

                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnpassword"
                android:layout_below="@id/lnarrival"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/tvpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:backgroundTint="@color/colorWhite"
                    android:inputType="textPassword"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorHint"
                    android:textSize="16sp"
                    android:maxLines="1"

                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnpassword2"
                android:layout_below="@id/lnpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/tvpassword2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Retype Password"
                    android:imeOptions="actionNext"
                    android:backgroundTint="@color/colorWhite"
                    android:inputType="textPassword"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorHint"
                    android:textSize="16sp"
                    android:maxLines="1"

                    />

            </LinearLayout>

            <Button
                android:id="@+id/btsignup"
                android:layout_below="@id/lnpassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/button_white"
                android:text="@string/signupdone"
                android:textAllCaps="false"

                android:textSize="18sp" />





        </RelativeLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>